# chatbot_FAQ

./: .gitignore  Dockerfile  docker-compose.yml  docker-compose.yml.save  docker-compose.yml.save.1
chatbot_project/: .env.example  .gitignore  README.md  pyproject.toml
chatbot_project/backend/: requirements.txt
chatbot_project/backend/audittrail/: __init__.py  admin.py  admin_mixins.py  apps.py  audit.py  models.py
chatbot_project/backend/audittrail/migrations/: 0001_initial.py
chatbot_project/backend/backend/: asgi.py  settings.py  urls.py
chatbot_project/backend/backend/core/: auth.py  hmac_auth.py  ratelimit.py  sec_headers.py  security.py
chatbot_project/backend/feedback_app/: admin.py  apps.py  models.py  urls.py  views.py
chatbot_project/backend/feedback_app/migrations/: 0001_initial.py  0002_botfeedback_user_id.py
chatbot_project/backend/instructions_app/: admin.py  apps.py  models.py  urls.py  views.py
chatbot_project/backend/instructions_app/migrations/: 0001_initial.py  0002_tag_instruction_tags.py
chatbot_project/backend/qa_app/: admin.py  apps.py  logging.py  models.py  text_utils.py  urls.py  utils.py  views.py
chatbot_project/backend/qa_app/migrations/: 0000_enable_pgvector.py  0001_initial.py  0002_unansweredquestion.py  0003_category_qaentry_category.py  0004_alter_category_options_alter_qaentry_options_and_more.py  0005_questionlog.py  0006_qaentry_synonyms_alter_category_name_and_more.py  0007_alter_qaentry_embedding.py  0008_merge_pgvector_and_0007.py  0009_add_allowed_telegram_user.py  (+5 more)
chatbot_project/bot/: bot.py
(+9 files in other folders)
